--- a/css/custom.css
+++ b/css/custom.css
@@ -41,3 +41,36 @@ font-weight: bold;
     color: #ffffff;
     background-color: #008036;
 }
+
+.sc_item_descr {
+    font-size: 1.5em;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 1.4em;
+    margin: 0 0 2.2em;
+    text-align: center;
+    word-spacing: 0; 
+}
+
+.top_panel_wrap .logo {
+     margin: 2em; 
+    overflow: hidden;
+}
+
+.logo_main img {
+    float: left;
+    margin: 0 0.5em 0.1em 0;
+    
+}
+
+.logo_main{
+    float:left;
+    width: 50px;
+}
+
+.top_panel_wrap .logo_main {
+    max-height: 300px;
+    width: 100px;
+    padding:20px 0;
+    border-radius: 100%;
+}
