--- a/css/custom.css
+++ b/css/custom.css
@@ -6,7 +6,7 @@ font-weight: bold;
 }
 
 .scheme_original a {
-    color: #0E3120;
+    color: #008000;
 }
 
 .scheme_original a:hover {
@@ -53,7 +53,7 @@ font-weight: bold;
 }
 
 .top_panel_wrap .logo {
-     margin: 2em; 
+     margin: 6em 0 0 2em; 
     overflow: hidden;
 }
 
@@ -70,14 +70,14 @@ font-weight: bold;
 
 .top_panel_wrap .logo_main {
     max-height: 300px;
-    width: 150px;
+    width: 200px;
     padding:20px 0;
     border-radius: 100%;
 }
 
 .top_panel_fixed .top_panel_wrap .logo_main {
     max-height: 300px;
-    width: 100px;
+    width: 200px;
     padding:20px 0;
     border-radius: 100%;
 }
@@ -136,7 +136,7 @@ h4.entry-title a{
 }
 
 .scheme_original .sc_button.sc_button_style_filled2 {
-    background-color: #ff7e27;
+    background-color: #008000;
     color: #ffffff;
 }
 
@@ -156,4 +156,8 @@ h4.entry-title a{
 .block_our_logo .sc_item_descr{
     margin-top:40px;
     color:white;
+}
+
+.tp-caption{
+    background: rgba(255, 0, 0, 0.5);
 }
